# celeste-client

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  example.py  pyproject.toml
docs/source/: conf.py  index.rst
docs/source/api/: celeste_client.core.rst  celeste_client.providers.rst  celeste_client.rst  modules.rst
src/celeste_client/: __init__.py  base.py  mapping.py
src/celeste_client/core/: __init__.py  config.py  enums.py  types.py
src/celeste_client/providers/: __init__.py  anthropic.py  gemini.py  google.py  huggingface.py  mistral.py  ollama.py  openai.py  transformers.py
src/clients/: gemini_client.py
tests/: test_factory.py
