[project]
name = "celeste-client"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.55.0",
    "google-genai>=0.1.0",
    "huggingface-hub>=0.28.2",
    "mistralai>=1.8.2",
    "ollama>=0.4.6",
    "openai>=1.91.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.46.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
