[project]
name = "celeste-client"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "celeste-core>=0.1.0",
    "anthropic>=0.55.0",
    "google-genai>=0.1.0",
    "huggingface-hub>=0.28.2",
    "mistralai>=1.8.2",
    "ollama>=0.4.6",
    "openai>=1.91.0",
    "pydantic>=2.8.2",
    "transformers>=4.43.4",
    "torch>=2.3.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.1",
    "streamlit>=1.46.0",
    "notebook>=7.4.4",
]


[tool.uv.sources]
celeste-core = { workspace = true }
